<resources>
    <string name="app_name">Ergasia 1</string>
    <string name="username_text">Username: </string>
    <string name="password_text">Password: </string>
    <string name="name_text">Name: </string>
    <string name="email_text">Email: </string>
    <string name="telephone_text">Telephone: </string>
    <string name="login_button">Log in</string>
    <string name="user_settings">User Settings</string>
    <string name="save_changes_button">Save changes</string>

</resources>
